<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/switch_name"
            android:gravity="bottom|left"
            android:layout_weight="0.6"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textStyle="bold|italic"


            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="bottom|left"
            android:id="@+id/switch_value"
            android:lines="1"


            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_name"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_weight="0.6"
            android:gravity="bottom|left"
            android:textStyle="bold|italic"



            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:id="@+id/description_value"
            android:gravity="bottom|left"
            android:inputType="text"
            android:lines="10"
            android:focusableInTouchMode="true"

            />


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:text="@string/save"
        android:id="@+id/save"
        android:textColor="@color/textcolor"
        android:background="@color/background"

        />
    </LinearLayout>
    </ScrollView>
